Fix: recruit pdf 전송 에러 수정
